--- a/Program2/config/database.yml
+++ b/Program2/config/database.yml
@@ -78,8 +78,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: program2_production
-  username: postgres
-  password: <%= ENV['PROGRAM2_DATABASE_PASSWORD'] %>
+#production:
+ # <<: *default
+  #database: program2_production
+  #username: postgres
+  #password: <%= ENV['PROGRAM2_DATABASE_PASSWORD'] %>
